--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="main.css">
 	<title>Apple</title>
 </head>
@@ -11,6 +13,7 @@
 	<div class="main">
 		<div class="front">
 			<nav id="header-nav">
+				
 				<div class="header-section">
 					Apple
 				</div>
@@ -41,8 +44,17 @@
 
 				<div class="header-section">
 					Support
-				</div>														
+				</div>
+															
 			</nav>
+			<div class="central-content">
+				<h1>What will your verse be?</h1>
+				<p>Everyone has something unique to share. See how people are using iPad in their unique ways to add the world's story.</p> 
+				<a href="#" class="white">Watch the "Your Verse" film and explore the stories <i class="medium material-icons">play_circle_outline</i></a>
+			</div>
+			
+			
+
 		</div>
 		<div class="feet">
 			<div class="one"></div>
