almost there I say...

--- a/index.html
+++ b/index.html
@@ -16,20 +16,15 @@
 		<div class="front">
 			<nav id="header-nav">
 				<div class="header-section">Apple</div>
-
 				<div class="header-section">Store</div>
-
 				<div class="header-section">Mac</div>
-
 				<div class="header-section">iPod</div>
-
 				<div class="header-section">iPhone</div>
-
 				<div class="header-section">iPad</div>
-
 				<div class="header-section">iTunes</div>
-
 				<div class="header-section">Support</div>
+				<div class="header-section" id = "search"> <i class="material-icons">search</i> <span> <input type="text" id ="search_bar"></span></div>
+
 															
 			</nav>
 			<div class="central-content">
